Update Dockerfile to include dependencies for GUI